# afinpe-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
afinpe_project/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  base.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
